# graphics-experiment

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  import_hdr.cpp  main.mm  shader.metal  skybox_test.hdr
assets/gltf/: cathedral.glb
assets/ifc/: AC20-Institute-Var-2.ifc  Tabel_Chairs.ifc  aisc_sculpture_brep.ifc  aisc_sculpture_param.ifc
assets/shaders/: shader_bindings.h  shader_blinn_phong.metal  shader_clear_depth.metal  shader_common.h  shader_common.metal  shader_constants.h  shader_deinterleaved_pbr.metal  shader_gltf.metal  shader_gltf_pbr.metal  shader_image_2d.metal  shader_lit.metal  shader_openpbr_surface.metal  shader_pbr.metal  shader_pbr_lookup_textures.metal  shader_pbr_prefilter_environment_map.metal  shader_shadow.metal  shader_skybox.metal  shader_terrain.metal  shader_ui.metal  shader_unlit.metal
assets/shaders_vulkan/: shader_unlit.frag  shader_unlit.vert
doc/: vulkan_layers_and_drivers.md
lib/: CMakeLists.txt  radiance.cpp  radiance.h
reference/: links.md
server/: server.cpp
shaders/: shader_3d.metal  shader_3d_lit.metal  shader_3d_textured.metal  shader_3d_unlit.metal  shader_common.h  shader_lit.metal  shader_shadow.metal  shader_skybox.metal  shader_terrain.metal  shader_tree.metal  shader_ui.metal  shader_unlit.metal
src/: common.h  constants.h  gltf.cpp  gltf.h  gltf.mm  main.mm  mesh.h  mesh.mm  model.h  perlin.cpp  perlin.h  procedural_mesh.h  procedural_mesh.mm  rect.h  scene.h
src/import/: gltf.h  gltf.mm  ifc.h  ifc.mm
src_vulkan/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  gltf.cpp  gltf.mm  ifc.cpp  json.cpp  main.cpp  molten_vk.cpp  moltenvk_hello_world.cpp  parser.cpp  sdl.mm  sdl_window.cpp  sdl_window.mm  sizes.cpp  test_args.h  tests.cpp  vulkan_loader.cpp  vulkan_meta_quest_open_xr.cpp  vulkan_sdl.cpp  vulkan_sdl_loader.cpp  websockets.cpp
